# iloilojobs

./: .gitignore  README.md
scrapers/: pyproject.toml
scrapers/src/iloilo_jobs/: __init__.py  __main__.py  cli.py  logging_config.py  registry.py
scrapers/src/iloilo_jobs/clients/: __init__.py  http.py  smartrecruiters.py  workday.py
scrapers/src/iloilo_jobs/companies/: __init__.py  asurion.json  carelon.json  concentrix.json  inspiro.json  iqor.json  nearsol.json  relx.json  telus.json  transcom.json  wns.json
scrapers/src/iloilo_jobs/filters/: __init__.py  employment.py  location.py
scrapers/src/iloilo_jobs/mappers/: __init__.py  workday_cxs.py
scrapers/src/iloilo_jobs/models/: __init__.py  company.py  job.py  scrape_result.py
scrapers/src/iloilo_jobs/pipeline/: __init__.py  collect.py  deduplicate.py  normalize.py  run.py  validate.py  writer.py
scrapers/src/iloilo_jobs/protocols/: __init__.py  provider.py
scrapers/src/iloilo_jobs/providers/: __init__.py  asurion.py  carelon.py  iqor.py  (+7 more)
scrapers/tests/: test_asurion_provider.py  test_carelon_provider.py  test_concentrix_provider.py  test_inspiro_provider.py  test_iqor_provider.py  test_location_filter.py  test_nearsol_provider.py  test_pipeline.py  test_registry.py  test_relx_provider.py  test_telus_provider.py  test_transcom_provider.py  test_wns_provider.py
scrapers/tests/fixtures/: asurion_cxs.json  carelon_cxs.json  concentrix_cxs.json  inspiro_careers.html  iqor_listdata.json  nearsol_wp.json  relx_cxs.json  telus_talemetry.json  transcom_jsonapi.json  transcom_pageprops.json  wns_postings.json
(+22 files in other folders)
