[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "iloilo-jobs"
version = "0.1.0"
description = "Iloilo BPO job aggregation scrapers"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27",
  "selectolax>=0.3.21",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
iloilo-jobs = "iloilo_jobs.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
iloilo_jobs = ["companies/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
